# SentinelFlow

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: integration.yml  lint.yml
bench/: locustfile.py  triton_bench.py
config/: __init__.py  settings.py
deploy/: __init__.py  docker-compose.yml  prometheus.yml
deploy/grafana/dashboards/: basic.json
deploy/helm/: Chart.yaml  values.secrets.yaml  values.yaml
deploy/k8s/: deployment.yaml
deploy/mlflow/: docker-compose.yml
deploy/model_repository/ensemble/: config.pbtxt
deploy/model_repository/gnn_fraud/1/: config.pbtxt
deploy/model_repository/lstm_fraud/1/: config.pbtxt
deploy/prometheus/: alert_rules.yml
deploy/vault/: README.md
dev/chaos/: README.md
ingestion/: README.md  __init__.py  avro_serializer.py  data_generator.py  kafka_producer.py  main.py  producer.py
ingestion/schemas/: transaction.avsc
labeling/backend/: app.py
labeling/frontend/: README.md
models/: __init__.py  data_loader.py  export_onnx.py  export_tensorrt.py  gnn_dataset.py  gnn_model.py  lstm_model.py  mlflow_register.py  online_trainer.py  preprocessing.py  train.py
processing/: __init__.py  drift_monitor.py  feast_sink.py  feature_engineering.py  graph_builder.py  main.py  minio_sink.py  redis_sink.py  spark_utils.py  stream_processor.py
serving/: __init__.py  app.py  explainability.py  feast_store.py  feature_store.py  metrics.py  online_update_worker.py  triton_client.py
storage/: __init__.py
tests/: replay_harness.py
